--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -21,12 +21,12 @@ h1 {
     width : 90%;
     padding-top: 17px;
     padding-left: 3%;
-    font-size: 24px;
+    font-size: 30px;
     color: #eeeeee;
 }
 
 h1 {
-    font-size: 22px;
+    font-size: 30px;
     display: inline;
 }
 
@@ -68,7 +68,6 @@ td {
     width: 66%;
     padding: 10px 2%;
 }
-
 botton {
     font-size: 14px;
     padding: 5px 10px;
@@ -98,12 +97,12 @@ botton {
     background-color: #f8d7da;
 }
 
-table#employee_list th {
+table#user_list th {
     width: 18%;
     padding: 10px 2%;
 }
 
-Table#employee_list td {
+Table#user_list td {
     width: 29%;
     padding: 10px 2%;
 }
@@ -127,7 +126,7 @@ select {
     display: inline-block;
 }
 
-#employee_name {
+#user_name {
     color: #cccccc;
     width: 36%;
     padding-right: 3%;
@@ -143,35 +142,14 @@ h1 a {
     color: #eeeeee;
 }
 
-table#report_list th {
+table#dinner_list th {
     font-weight: bold;
     padding: 10px 2%;
 }
 
-table#report_list .report_name {
+table#dinner_list .dinner_name {
     width: 20%;
     padding: 10px 2%;
-}
-
-table#report_list .report_date {
-    width: 15%;
-}
-
-table#report_list .report_title {
-    width: 20%;
-}
-
-
-table#report_list .begin_time {
-    width: 15%;
-}
-
-table#report_list .finish_time {
-    width: 15%;
-}
-
-table#report_list .report_action {
-    width: 13%;
 }
 
 pre {
