Add Dinner class

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -98,12 +98,12 @@ botton {
 }
 
 table#user_list th {
-    width: 18%;
+    width: 50%;
     padding: 10px 2%;
 }
 
 Table#user_list td {
-    width: 29%;
+    width: 50%;
     padding: 10px 2%;
 }
 
@@ -126,9 +126,9 @@ select {
     display: inline-block;
 }
 
-#user_name {
+#name {
     color: #cccccc;
-    width: 36%;
+    width: 25%;
     padding-right: 3%;
     text-align: right;
     display: inline-block;
