--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -120,15 +120,15 @@ select {
 }
 
 #header_menu {
-    width: 57%;
+    width: 40%;
     padding-top: 17px;
     padding-left: 3%;
     display: inline-block;
 }
 
-#name {
+#user_name {
     color: #cccccc;
-    width: 25%;
+    width: 50%;
     padding-right: 3%;
     text-align: right;
     display: inline-block;
